fix scrollbar

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -111,6 +111,7 @@ img {
 
 .topicContainer {
   height: 3rem;
+  overflow: hidden;
 }
 
 .topicBox {
